implementation with ci-jwt

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <main>
             <form class="formWrapper" id="form-process" method="post">
                 <div class="field-wrapper">
-                    <input type="text" name="dataVars" id="dataVars" placeholder="Any text to send to server..">
+                    <input type="text" name="data" id="data" placeholder="Any text to send to server..">
                 </div>
                 <button id="submit-btn" name="submit" type="submit" >Submit</button>
             </form>
             <div id="api">
-                <div id="ajax-get"></div>
+                <div id="api-response"></div>
             </div>
         </main>
         <script src="assets/jquery-3.5.1.min.js"></script>
