--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <body>
         <main>
             <form class="formWrapper" id="form-process" method="post">
+                <ul id="action-list">
+                    <li>
+                        <a href="#" id="GET_TOKEN">Get Token</a>
+                    </li>
+                    <li>
+                        <a href="#" id="VERIFY_TOKEN">Verify Token</a>
+                    </li>
+                </ul>
                 <div class="field-wrapper">
                     <input type="text" name="data" id="data" placeholder="Any text to send to server..">
                 </div>
