--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="copyright" content="" />
         <meta name="robots" content="index,follow"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-        <link href="assets/style.css" rel="stylesheet">
+        <link href="assets/css/style.css" rel="stylesheet">
     </head>
     <body>
         <main>
@@ -24,15 +24,15 @@
                     </li>
                 </ul>
                 <div class="field-wrapper">
-                    <input type="text" name="data" id="data" placeholder="Any text to send to server..">
+                    <input type="text" name="data" id="input-value" placeholder="Any text to send to server..">
                 </div>
-                <button id="submit-btn" name="submit" type="submit" >Submit</button>
             </form>
             <div id="api">
                 <div id="api-response"></div>
             </div>
         </main>
-        <script src="assets/jquery-3.5.1.min.js"></script>
-        <script type="module" src="assets/scripts.js"></script>
+        <script src="assets/libs/jquery-3.5.1.min.js"></script>
+        <script src="assets/libs/jsencrypt.min.js"></script>
+        <script type="module" src="assets/libs/scripts.js"></script>
     </body>
 </html>
