--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <form class="formWrapper" id="form-process" method="post">
                 <ul id="action-list">
                     <li>
+                        <a href="#" id="VERIFY_KEY">Verify Key</a>
+                    </li>
+                    <li>
                         <a href="#" id="GET_TOKEN">Get Token</a>
                     </li>
                     <li>
@@ -32,7 +35,6 @@
             </div>
         </main>
         <script src="assets/libs/jquery-3.5.1.min.js"></script>
-        <script src="assets/libs/jsencrypt.min.js"></script>
         <script type="module" src="assets/libs/scripts.js"></script>
     </body>
 </html>
