--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             </div>
         </main>
         <script src="assets/libs/jquery-3.5.1.min.js"></script>
-        <script type="module" src="assets/libs/scripts.js"></script>
+        <!-- <script type="module" src="assets/libs/scripts.js"></script> -->
+        <script src="dist/polyfill.bundle.js"></script>
+        <script src="dist/app.bundle.js"></script>
     </body>
 </html>
